test/expected/simple-timer.txt
/scripts/simple-timer.js:9
  throw new Error('trace');
  ^

Error: trace
    at callback (/scripts/simple-timer.js:9:9)
    at Timer.listOnTimeout (timers.js:93:15)
    at Object.<anonymous> (/scripts/simple-timer.js:8:1)
    at Module._compile (module.js:399:26)
    at Object.Module._extensions..js (module.js:406:10)
    at Module.load (module.js:345:32)
    at Function.Module._load (module.js:302:12)
    at Function.Module.runMain (module.js:431:10)
    at startup (node.js:141:18)
    at node.js:977:3
